support many systems
rewrite vars
clean up

--- a/templates/etc/mysql/mariadb.conf.d/50-mysqld_safe.cnf.j2
+++ b/templates/etc/mysql/mariadb.conf.d/50-mysqld_safe.cnf.j2
@@ -28,5 +28,6 @@
 # Remember to edit /etc/mysql/debian.cnf when changing the socket location.
 socket          = {{ mariadb_socket }}
 nice            = 0
-skip_log_error
-syslog
+# skip_log_error
+# syslog
+log-error = /var/log/mysql/mysql.err
