split detected version to define a shorter version string
tests with ansible 2.9 and 2.10

--- a/templates/etc/mysql/mariadb.conf.d/50-server.cnf.j2
+++ b/templates/etc/mysql/mariadb.conf.d/50-server.cnf.j2
@@ -77,4 +77,4 @@ lc_messages_dir = {{ mariadb_messages_dir }}
 # This group is only read by MariaDB-10.1 servers.
 # If you use the same .cnf file for MariaDB of different versions,
 # use this group for options that older servers don't understand
-[mariadb-10.1]
+[mariadb-{{ mariadb_short_version }}]
