--- a/templates/etc/mysql/conf.d/mysql.cnf.j2
+++ b/templates/etc/mysql/conf.d/mysql.cnf.j2
@@ -1,4 +1,7 @@
 {{ ansible_managed | comment(decoration='# ') }}
+{% from "macros/macros.j2" import print_segment %}
 
-[mysql]
-
+{% for segment, v in mariadb_config.items() %}
+[{{ segment }}]
+{{ print_segment(v) }}
+{% endfor %}
