--- a/templates/etc/mysql/mariadb.cnf.j2
+++ b/templates/etc/mysql/mariadb.cnf.j2
@@ -13,9 +13,11 @@
 # One can use all long options that the program supports.
 # Run program with --help to get a list of available options and with
 # --print-defaults to see which it would actually understand and use.
+#
+# If you are new to MariaDB, check out https://mariadb.com/kb/en/basic-mariadb-articles/
 
 #
-# This group is read both both by the client and the server
+# This group is read both by the client and the server
 # use it for options that affect everything
 #
 [client-server]
