--- a/templates/etc/apt/mariadb.list.j2
+++ b/templates/etc/apt/mariadb.list.j2
@@ -1,10 +1,12 @@
+#jinja2: trim_blocks: True, lstrip_blocks: True
+# {{ ansible_managed }}
 # mariadb apt repositories
 
 {% if ansible_distribution | lower == 'debian' %}
-{% set _family = ansible_os_family | lower %}
+  {% set _family = ansible_os_family | lower %}
 {% endif %}
 {% if ansible_distribution | lower == 'ubuntu' %}
-{% set _family = ansible_distribution | lower %}
+  {% set _family = ansible_distribution | lower %}
 {% endif %}
 
 deb [arch={{ docker_apt_arch | default('amd64') }}] {{ mariadb_debian_repo }}/{{ mariadb_version }}/{{ _family }} {{ ansible_distribution_release }} main
