--- a/templates/etc/my.cnf.j2
+++ b/templates/etc/my.cnf.j2
@@ -1,4 +1,4 @@
-{{ ansible_managed | comment(decoration='#') }}
+# {{ ansible_managed }}
 
 # The MariaDB configuration file
 #
@@ -13,7 +13,7 @@
 # --print-defaults to see which it would actually understand and use.
 
 #
-# This group is read both both by the client and the server
+# This group is read both by the client and the server
 # use it for options that affect everything
 #
 [client-server]
