--- a/templates/etc/mysql/conf.d/macros/macros.j2
+++ b/templates/etc/mysql/conf.d/macros/macros.j2
@@ -8,10 +8,10 @@
   {% endif %}
 {%- endmacro -%}
 
-{%- macro print_key_value(key, value) -%}{#- Formats a variable for inserting it into UCL -#}
+{%- macro print_key_value(key, value) -%}
   {% if value %}
-{{ key.ljust(35) }} = {{ value -}}
+{{ key.ljust(35) | replace('_', '-') }} = {{ value -}}
   {% else %}
-{{ key -}}
+{{ key | replace('_', '-') -}}
   {% endif %}
 {%- endmacro -%}
