--- a/templates/etc/mysql/my.cnf.j2
+++ b/templates/etc/mysql/my.cnf.j2
@@ -15,7 +15,7 @@
 # --print-defaults to see which it would actually understand and use.
 
 #
-# This group is read both both by the client and the server
+# This group is read both by the client and the server
 # use it for options that affect everything
 #
 [client-server]
