--- a/templates/etc/mysql/debian-start.j2
+++ b/templates/etc/mysql/debian-start.j2
@@ -1,14 +1,14 @@
 #!/bin/bash
 #
-# This script is executed by "/etc/init.d/mysql" on every (re)start.
+# This script is executed by both SysV init /etc/init.d/mariadb and
+# systemd mariadb.service on every (re)start.
 #
 # Changes to this file will be preserved when updating the Debian package.
-#
-# NOTE: This file is read only by the traditional SysV init script, not systemd.
 #
 
 source /usr/share/mysql/debian-start.inc.sh
 
+# Read default/mysql first and then default/mariadb just like the init.d file does
 if [ -f /etc/default/mysql ]; then
   . /etc/default/mysql
 fi
@@ -21,27 +21,30 @@ then
 fi
 
 # detect mariadb binary
-
 MARIADB_BIN=$(command -v mariadb)
 
 if [ -n "${MARIADB_BIN}" ]
 then
   MYSQL_BIN="${MARIADB_BIN}"
   MYSQLADMIN_BIN="$(command -v mariadb-admin)"
-  MYUPGRADE_BIN="$(command -v mariadb-upgrade)"
-  MYCHECK_BIN="$(command -v mariadb-check)"
+  MYSQLUPGRADE_BIN="$(command -v mariadb-upgrade)"
+  MYSQLCHECK_BIN="$(command -v mariadb-check)"
+  MYSQLDUMP_BIN="$(command -v mariadb-dump)"
+  MYSQLSHOW_BIN="$(command -v mariadb-show)"
 else
   MYSQL_BIN="$(command -v mysql)"
   MYSQLADMIN_BIN="$(command -v mysqladmin)"
-  MYUPGRADE_BIN="$(command -v mysql_upgrade)"
-  MYCHECK_BIN="$(command -v mysqlcheck)"
+  MYSQLUPGRADE_BIN="$(command -v mysql_upgrade)"
+  MYSQLCHECK_BIN="$(command -v mysqlcheck)"
+  MYSQLDUMP_BIN="$(command -v mysqldump)"
+  MYSQLSHOW_BIN="$(command -v mysqlshow)"
 fi
 
 MYSQL="${MYSQL_BIN} --defaults-file=${DEFAULTS_FILE}"
 MYADMIN="${MYSQLADMIN_BIN} --defaults-file=${DEFAULTS_FILE}"
 # Don't run full mysql_upgrade on every server restart, use --version-check to do it only once
-MYUPGRADE="${MYUPGRADE_BIN} --defaults-extra-file=${DEFAULTS_FILE} --version-check"
-MYCHECK="${MYCHECK_BIN} --defaults-file=${DEFAULTS_FILE}"
+MYUPGRADE="${MYSQLUPGRADE_BIN} --defaults-extra-file=${DEFAULTS_FILE} --version-check"
+MYCHECK="${MYSQLCHECK_BIN} --defaults-file=${DEFAULTS_FILE}"
 MYCHECK_SUBJECT="WARNING: mysqlcheck has found corrupt tables"
 MYCHECK_PARAMS="--all-databases --fast --silent"
 MYCHECK_RCPT="${MYCHECK_RCPT:-root}"
