--- a/templates/bin/wsrep_notify.sh.j2
+++ b/templates/bin/wsrep_notify.sh.j2
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+# echo "you passed me" "$@" >> /var/log/mysql/cluster.log
+
 while [ $# -gt 0 ]
 do
     case $1 in
@@ -20,20 +22,23 @@ do
         shift
         ;;
     --members)
-        MEMBERS=$2
+        MEMBERS="${2}"
+        MEMBERS="$(echo ${MEMBERS}| sed 's|,|\n|g' | nl -bn)"
         shift
         ;;
     esac
     shift
 done
 
-{
-    echo "Local date: $(date "+%Y.%m.%d %H:%M:%S")"
-    echo "Cluster UUID: $CLUSTER_UUID"
-    echo "Current state: $STATUS"
-    echo "Cluster status: $PRIMARY"
-    echo "Current members: "
-    echo $MEMBERS | tr ',' '\n'
-} | tee -a /var/log/mysql/cluster.log
+cat << EOF >> /var/log/mysql/cluster.log
+
+  == Local date: $(date "+%Y.%m.%d %H:%M:%S") ===
+  Cluster UUID: $CLUSTER_UUID
+  Current state: $STATUS
+  Cluster status: $PRIMARY
+  Current members:
+$MEMBERS
+  ------------------------------------------------
+EOF
 
 exit 0
